# mongoquery

./: README.rst  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
mongoquery/: __init__.py
tests/: test_query.py
